Fix card component on mobile devices and personalise select effect.

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -31,3 +31,8 @@ body {
     padding: 0rem; // 1rem = 8px, 8/16 = 50%
   }
 }
+
+::selection {
+  color: $color-white;
+  background-color: $color-primary-light;
+}
